2004-05-10  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.h, IgProf.cc: Clean up internal static variable usage.
	Provide clean means to lock and unlock profiler core and activate
	or deactivate all enabled modules.  Use the facility in hooked
	functions.  Dump output in XML.  Dump symbol table separately
	from the trace.
	* IgProfFileDesc.cc: Use new profiler locking/activation scheme.
	* IgProfPerf.cc: Use new profiler locking/activation scheme.
	* IgProfMem.cc: Use new profiler locking/activation scheme.
	Automatically enable live counting if leak checking is turned on.

2004-05-07  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc (dumpTrace): Dump node address so leaks can be matched.

	* Preliminary version rewritten using IgHook.

2004-04-16  Giulio Eulisse  <giulio.eulisse@cern.ch>

	* IgSProfTimerHooks.cc, IgSProfPThreadCreateHooks.cc: using thread
	as argument name in place of __thread as the latter is a keyword
	with more recent versions of glibc.
	Fixed the __THROW statement in pthread_join () as the prototype
	has changed in more recent versions of glibc.

2004-03-15  Giulio Eulisse  <giulio.eulisse@cern.ch>

	* IgSProfTimerHooks.cc: more robust support for multithreading.

	* IgSProfPThreadCreateHooks.cc: added magic code for
	wrapping pthread_create and several other pthread related
	functions in order to intercept the creation of a new thread.

	* IgMProfSymbolFilter.cc (IgMProfSymbolFilter): beatification
	fixes.

2004-02-04  Giulio Eulisse  <giulio.eulisse@cern.ch>

	* test_forking.cc: test for pthreads profiling... 

	* IgSProfPThreadCreateHooks.cc: workaround to enable SIGPROF also
	for spawned threads... It shouldn't be necessary, but it looks
	like it is...

	* IgMProfTreeTextBrowser.cc (dump): "MemProfLib:" references in
	output substituted with "IgProf:".

	* IgSProfTimerHooks.cc (IGUANA_sprof_sigprof_hook): rebroadcasting
	signal to other threads to overcome linux strange behavior when
	using pthreads and signals.
