@@ -1,5 +1,11 @@
 2004-05-10  Lassi A. Tuura  <lat@iki.fi>
 
+	* IgProf.h (IGPROF_LIBHOOK): New, for library-targeted hooks.
+	* IgProf.cc: Use it to capture exit() from libc directly in
+	non-dynamic programs such as "ls".
+	* IgProfPerf.cc: Implement.
+	* IgProfMem.cc: Remove unnecessary crud.
+
 	* IgProf.h, IgProf.cc: Clean up internal static variable usage.
 	Provide clean means to lock and unlock profiler core and activate
 	or deactivate all enabled modules.  Use the facility in hooked
